--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 :root {
 --cor-de-fundo:#4000b8;
---verde:#6fff57;
+--verde:#ff0000;
 --branco:#ffffff;
 --botao-ativo:#0c008b;
---botao-inativo:#f70c0c;
+--botao-inativo:#00aeff;
 --texto-fundo:#fffb00;
 }
 body{
@@ -24,4 +24,37 @@ body{
     text-align: center;
     width: 100%;
     font-size: 37px;
+}
+.botao{
+    font-family: 'Times New Roman', Times, serif;
+    background-color: var(--botao-inativo);
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    padding: 1em;
+    font-size: 18px;
+    align-items: center;
+    width: 100%;
+    border-bottom: 4px solid var(--botao-ativo);
+    border-left: 2px solid var(--botao-ativo);
+    border-right: 2px solid var(--botao-ativo);
+    border-top: none;
+}
+.botao:first-child{
+    border-radius: 40px 40px 0 0;
+}
+.botoes{
+    display: block;
+}
+.ativo{
+    background-color: var(--botao-ativo);
+    border-bottom: 4px solid var(--verde);
+}
+@media screen and (min-width: 768px) {
+    .botoes{
+        display: flex;
+    }
+    .botao:last-child{
+        border-radius: 0 40px 0 0;
+    }
 }
