--- a/style.css
+++ b/style.css
@@ -54,6 +54,9 @@ body{
     .botoes{
         display: flex;
     }
+    .botao:first-child{
+        border-radius: 40px 0 0 0;
+    }
     .botao:last-child{
         border-radius: 0 40px 0 0;
     }
