--- a/style.css
+++ b/style.css
@@ -61,3 +61,8 @@ body{
         border-radius: 0 40px 0 0;
     }
 }
+.aba-textos{
+    background-color: var(--texto-fundo);
+    padding: 40px;
+    border-radius: 0 0 40px 40px;
+}
